--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,2 @@
-flask
-werkzeug
-flask-login
-flask-pymongo
-flask-bcrypt
-pymongo
+Flask
 gunicorn
-requests
-numpy
-pandas
-tensorflow
-scikit-learn
